...

        newsStore.fetchStoryCollection()
            .observe(on: MainScheduler.instance)
            .subscribe(onSuccess: { [weak self] storyCollection in
                self?.titleSubject.onNext(storyCollection.title)
                let items = storyCollection.data.map(StoryListItemViewModel.init)
                let section = StoriesSection(header: "Stories", items: items)
                self?.sectionsSubject.onNext([section])
                self?.isFetchingSubject.onNext(false)
                os_log("Fetched %d stories", log: .app, storyCollection.data.count)
            }, onFailure: { [weak self] error in
                self?.isFetchingSubject.onNext(false)
                self?.fetchErrorSubject.onNext(error)
...
