...
        return label
    }()

    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)

        accessibilityLabel = NSLocalizedString("Main Story item", comment: "Main Story item")

        contentView.layoutMargins.top *= 2
        contentView.layoutMargins.bottom *= 2

        contentView.addSubview(storyImageView)
        storyImageView.translatesAutoresizingMaskIntoConstraints = false
...
